WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197269
Web Inspector: user gesture toggle should also force user interaction flag
https://bugs.webkit.org/show_bug.cgi?id=197269
Summary
Web Inspector: user gesture toggle should also force user interaction flag
Devin Rousso
Reported
2019-04-24 20:35:59 PDT
This would allow `$0.click()` to show a keyboard for editable elements on iOS devices.
Attachments
Patch
(9.59 KB, patch)
2019-04-24 21:30 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-highsierra
(3.07 MB, application/zip)
2019-04-24 22:36 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews117 for mac-highsierra
(2.86 MB, application/zip)
2019-04-24 23:32 PDT
,
EWS Watchlist
no flags
Details
Patch
(13.19 KB, patch)
2019-04-26 16:18 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(14.01 KB, patch)
2019-05-03 19:36 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews215 for win-future
(13.54 MB, application/zip)
2019-05-03 21:41 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2019-04-24 21:30:25 PDT
Created
attachment 368209
[details]
Patch
EWS Watchlist
Comment 2
2019-04-24 21:34:16 PDT
Comment hidden (obsolete)
Attachment 368209
[details]
did not pass style-queue: ERROR: Source/WebCore/page/ChromeClient.h:506: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] ERROR: Source/WebCore/page/ChromeClient.h:507: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 2 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 3
2019-04-24 22:36:05 PDT
Comment hidden (obsolete)
Comment on
attachment 368209
[details]
Patch
Attachment 368209
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/11992081
New failing tests: inspector/runtime/evaluate-userGestureEmulation.html
EWS Watchlist
Comment 4
2019-04-24 22:36:06 PDT
Comment hidden (obsolete)
Created
attachment 368214
[details]
Archive of layout-test-results from ews102 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 5
2019-04-24 23:32:11 PDT
Comment hidden (obsolete)
Comment on
attachment 368209
[details]
Patch
Attachment 368209
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/11992126
New failing tests: inspector/runtime/evaluate-userGestureEmulation.html
EWS Watchlist
Comment 6
2019-04-24 23:32:13 PDT
Comment hidden (obsolete)
Created
attachment 368216
[details]
Archive of layout-test-results from ews117 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-highsierra Platform: Mac OS X 10.13.6
Devin Rousso
Comment 7
2019-04-26 16:18:43 PDT
Created
attachment 368362
[details]
Patch
EWS Watchlist
Comment 8
2019-04-26 16:24:26 PDT
Comment hidden (obsolete)
Attachment 368362
[details]
did not pass style-queue: ERROR: Source/WebCore/page/ChromeClient.h:506: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] ERROR: Source/WebCore/page/ChromeClient.h:507: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 2 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 9
2019-05-03 17:27:40 PDT
Comment on
attachment 368362
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=368362&action=review
> Source/WebCore/page/ChromeClient.h:507 > + virtual void setUserIsInteracting(bool /* userIsInteracting */) { }
The comment doesn't seem useful over just a `(bool)`.
> LayoutTests/inspector/runtime/evaluate-userGestureEmulation-userIsInteracting-expected.txt:6 > +-- Running test case: EvaluateWithoutEmulatingUserGesture.userIsInteracting > +User is interacting
Seems this line should be `User is not Interacting`. That is what this change is trying to address, right?
> LayoutTests/inspector/runtime/evaluate-userGestureEmulation-userIsInteracting.html:12 > + TestPage.addResult(window.internals.userIsInteracting() ? "User is interacting" : "User is not Interacting");
Nit: Keep the case the same. Maybe: User is Interacting User is NOT Interacting
Joseph Pecoraro
Comment 10
2019-05-03 17:29:45 PDT
Comment on
attachment 368362
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=368362&action=review
> Source/WebCore/inspector/agents/page/PageRuntimeAgent.cpp:172 > + bool userWasInteracting = pageChromeClient.userIsInteracting(); > + if (!userWasInteracting)
Seems this condition should probably be: if (!userWasInteracting && emulateUserGesture) Otherwise it will always setting interaction even if `emulateUserGesture` was not true.
Devin Rousso
Comment 11
2019-05-03 19:36:44 PDT
Created
attachment 369037
[details]
Patch
EWS Watchlist
Comment 12
2019-05-03 19:38:17 PDT
Comment hidden (obsolete)
Attachment 369037
[details]
did not pass style-queue: ERROR: Source/WebCore/page/ChromeClient.h:506: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] ERROR: Source/WebCore/page/ChromeClient.h:507: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 2 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 13
2019-05-03 21:41:01 PDT
Comment hidden (obsolete)
Comment on
attachment 369037
[details]
Patch
Attachment 369037
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/12095765
New failing tests: http/tests/css/filters-on-iframes.html
EWS Watchlist
Comment 14
2019-05-03 21:41:03 PDT
Comment hidden (obsolete)
Created
attachment 369046
[details]
Archive of layout-test-results from ews215 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews215 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Joseph Pecoraro
Comment 15
2019-05-15 15:19:11 PDT
Comment on
attachment 369037
[details]
Patch r=me
WebKit Commit Bot
Comment 16
2019-05-15 15:42:11 PDT
Comment on
attachment 369037
[details]
Patch Clearing flags on attachment: 369037 Committed
r245366
: <
https://trac.webkit.org/changeset/245366
>
WebKit Commit Bot
Comment 17
2019-05-15 15:42:12 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 18
2019-05-15 15:44:16 PDT
<
rdar://problem/50830155
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug